Bug 353393 - Regression kAddressbook 5: Importing vCards from kMail does not work any more
Summary: Regression kAddressbook 5: Importing vCards from kMail does not work any more
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-01 08:54 UTC by Gunter Ohrner
Modified: 2016-01-03 13:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
Screenshot (12.86 KB, image/png)
2015-12-31 21:48 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2015-10-01 08:54:59 UTC
I'm currently using kMail 5.0.1 and kAddressbook 5.0.1 from stable branch (Kubuntu KDE CI Stable PPA).

Importing a vCard received as an eMail attachment does not appear to be possible, it can be displayed in kMail, but no import button is provided (I'm not sure if there was one in older kMail versions) and attempting to open the vCard with kAddressbook does not seem to do anything except starting kAddressbook...

In kMail 4.x / kAddressbook 4.x, importing of vCards definitely worked, I used it regularly.

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2015-12-31 21:48:25 UTC
Created attachment 96390 [details]
Screenshot

I can import a vCard received using KMail/KAddressBook 5.1 (KDE Applications 15.12).
However,  I can see a strange button to import the vCard "Previous Card" in the opened dialog. In previous version (KDE 4.14), I see a "Import" button, instead.
See screenshot.
Comment 2 Laurent Montel 2016-01-03 13:19:05 UTC
Git commit a82128dffafe0abb466187136ef02ac216dd3632 by Montel Laurent.
Committed on 03/01/2016 at 13:18.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 353393 - Regression kAddressbook 5: Importing vCards from kMail does not work any more

FIXED-IN: 5.1.1

M  +2    -2    messageviewer/src/widgets/vcardviewer.cpp

http://commits.kde.org/kdepim/a82128dffafe0abb466187136ef02ac216dd3632