Fix Bug 353393 - Regression kAddressbook 5: Importing vCards from kMail does not work any more

FIXED-IN: 5.1.1
BUG: 353393